2013-09-13  Andreas Kling  <akling@apple.com>

        [CTTE] RenderListItem is never anonymous.
        <https://webkit.org/b/121285>

        Reviewed by Antti Koivisto.

        Hide element() and provide existingElement() instead, returning an Element&.
        Removed some bogus assertions that were exposed by this.

2013-09-13  Andreas Kling  <akling@apple.com>

        [CTTE] Tighter element types for RenderSVGInline and subclasses.
        <https://webkit.org/b/121283>

        Reviewed by Antti Koivisto.

        Codify the following:

        - RenderSVGInline always has an SVGGraphicsElement.
        - RenderSVGTextPath always has an SVGTextPathElement.
        - RenderSVGTSpan always has an SVGTextPositioningElement.

        None of these renderers are ever anonymous, so delete element() and provide
        strongly typed reference getters instead.

2013-09-13  Andreas Kling  <akling@apple.com>

        [CTTE] RenderFileUploadControl always has a HTMLInputElement.
        <https://webkit.org/b/121278>

        Reviewed by Darin Adler.

        RenderFileUploadControl is never anonymous and always has a corresponding HTMLInputElement.

2013-09-13  Andreas Kling  <akling@apple.com>

        [CTTE] RenderFieldset always has a HTMLFieldSetElement.
        <https://webkit.org/b/121277>

        Reviewed by Darin Adler.

        RenderFieldset is never anonymous and always has a corresponding HTMLFieldSetElement.

2013-09-13  Andreas Kling  <akling@apple.com>

        [CTTE] RenderButton always has a HTMLFormControlElement.
        <https://webkit.org/b/121281>

        Reviewed by Antti Koivisto.

        RenderButton is never anonymous and has either a <button> or an <input> element,
        and their nearest shared ancestor is HTMLFormControlElement.

2013-09-13  Darin Adler  <darin@apple.com>

        Give actions in Range class NON_SHOUTING_NAMES
        https://bugs.webkit.org/show_bug.cgi?id=121280

        Reviewed by Andreas Kling.
