@@ -35,8 +35,8 @@ namespace WebCore {
 
 using namespace HTMLNames;
 
-RenderTableCol::RenderTableCol(Element* element)
-    : RenderBox(element)
+RenderTableCol::RenderTableCol(Element& element)
+    : RenderBox(&element)
     , m_span(1)
 {
     // init RenderObject attributes
@@ -59,10 +59,9 @@ void RenderTableCol::styleDidChange(StyleDifference diff, const RenderStyle* old
 void RenderTableCol::updateFromElement()
 {
     unsigned oldSpan = m_span;
-    Element* element = this->element();
-    if (element && (element->hasTagName(colTag) || element->hasTagName(colgroupTag))) {
-        HTMLTableColElement* tc = static_cast<HTMLTableColElement*>(element);
-        m_span = tc->span();
+    if (existingElement().hasTagName(colTag) || existingElement().hasTagName(colgroupTag)) {
+        HTMLTableColElement& tc = static_cast<HTMLTableColElement&>(existingElement());
+        m_span = tc.span();
     } else
         m_span = !(style() && style()->display() == TABLE_COLUMN_GROUP);
     if (m_span != oldSpan && style() && parent())
